<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offer_details_grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/poi_detail_title_value_text_view"
    tools:showIn="@layout/activity_offer_detail"
    android:stretchColumns="0,1,2,3">

    <TableRow
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/poi_detail_rooms_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_rooms" />

        <TextView
            android:id="@+id/poi_detail_rooms_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="0"/>

        <TextView
            android:id="@+id/poi_detail_offerType_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_type" />

        <TextView
            android:id="@+id/poi_detail_offerType_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="unknown"/>

    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/poi_detail_area_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_area"/>

        <TextView
            android:id="@+id/poi_detail_area_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="0m\u00B2" />

        <TextView
            android:id="@+id/poi_detail_pricingType_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_pricingType" />

        <TextView
            android:id="@+id/poi_detail_pricingType_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="unknown" />

    </TableRow>

    <TableRow
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/poi_detail_buildingType_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_buildingType" />

        <TextView
            android:id="@+id/poi_detail_buildingType_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="unknown"/>

        <TextView
            android:id="@+id/poi_detail_price_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_price" />

        <TextView
            android:id="@+id/poi_detail_price_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="unknown" />

    </TableRow>

    <TableRow
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/poi_detail_floor_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_floor" />

        <TextView
            android:id="@+id/poi_detail_floor_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="0" />

        <TextView
            android:id="@+id/poi_detail_deposit_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_deposit" />

        <TextView
            android:id="@+id/poi_detail_deposit_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="unknown" />

    </TableRow>

    <TableRow
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/poi_detail_address_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_address" />

        <TextView
            android:id="@+id/poi_detail_address_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="unknown" />

        <TextView
            android:id="@+id/poi_detail_extraCosts_key_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/offer_extraCosts" />

        <TextView
            android:id="@+id/poi_detail_extraCosts_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="unknown" />

    </TableRow>

</TableLayout>