<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arlab.realestate.android.activity.OfferDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poi_detail_image_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:contentDescription="@string/offer_image_description"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/default_house_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/poi_detail_offerId_key_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer_id_value"
                android:textSize="6pt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/poi_detail_offerId_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="0"
                android:textSize="6pt"
                app:layout_constraintStart_toEndOf="@id/poi_detail_offerId_key_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/poi_detail_title_value_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingStart="?android:attr/listPreferredItemPaddingLeft"
                android:paddingEnd="?android:attr/listPreferredItemPaddingRight"
                android:text="@string/offer_title"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                app:layout_constraintTop_toBottomOf="@id/poi_detail_offerId_value_text_view" />

            <include layout="@layout/offer_details_grid" />

            <TextView
                android:id="@+id/poi_detail_description_key_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/offer_description"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offer_details_grid_layout" />

            <TextView
                android:id="@+id/poi_detail_description_value_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/offer_description"
                android:breakStrategy="high_quality"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poi_detail_description_key_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>

